# UGroundControl

./: .gitignore  CMakeLists.txt  LICENSE  Main.qml  README.md  UGroundControl.json  UGroundControl.qrc  main.cpp  map.html  vcpkg.json
UgcQuick/: qmldir
UgcQuick/controls/: UgcButton.qml  UgcComboBox.qml  UgcImportFileBox.qml  UgcInputBox.qml  UgcInputComboBox.qml  UgcInputMixBox.qml  UgcText.qml
qml/: Body.qml  Header.qml  Main.qml
qml/component/: Lidar.qml  Setting.qml  ToolBox.qml
qml/map/: BaiduWebMap.qml  NativeMap.qml
src/: main.cpp
src/Common/: CMakeLists.txt  UGCApplication.cpp  UGCApplication.h  UGCContext.cpp  UGCContext.h
src/LidarManager/: CMakeLists.txt  LidarManager.cpp  LidarManager.h
src/LinkManager/: CMakeLists.txt  LinkManager.cpp  LinkManager.h  MqttLink.cpp  MqttLink.h
src/LinkProtocol/: CMakeLists.txt  link_protocol.pb.cc  link_protocol.pb.h  msg_battery_status.pb.cc  msg_battery_status.pb.h  msg_command.pb.cc  msg_command.pb.h  msg_connect_request.pb.cc  msg_connect_request.pb.h  msg_connect_response.pb.cc  msg_connect_response.pb.h  msg_disconnect_request.pb.cc  msg_disconnect_request.pb.h  msg_disconnect_response.pb.cc  msg_disconnect_response.pb.h  msg_enum.pb.cc  msg_enum.pb.h  msg_heartbeat.pb.cc  msg_heartbeat.pb.h  msg_mission_clear_request.pb.cc  msg_mission_clear_request.pb.h  msg_mission_clear_response.pb.cc  msg_mission_clear_response.pb.h  msg_mission_current.pb.cc  msg_mission_current.pb.h  msg_mission_download_request.pb.cc  msg_mission_download_request.pb.h  msg_mission_download_response.pb.cc  msg_mission_download_response.pb.h  msg_mission_item.pb.cc  msg_mission_item.pb.h  msg_mission_set_current.pb.cc  msg_mission_set_current.pb.h  msg_mission_upload_request.pb.cc  msg_mission_upload_request.pb.h  msg_mission_upload_response.pb.cc  msg_mission_upload_response.pb.h  msg_param_item.pb.cc  msg_param_item.pb.h  msg_param_read_request.pb.cc  (+7 more)
src/LogManager/: CMakeLists.txt  LogManager.cpp  LogManager.h
src/MapManager/: CMakeLists.txt  MapManager.cpp  MapManager.h
src/MavlinkProtocol/: CMakeLists.txt
src/MissionManager/: CMakeLists.txt  MissionManager.cpp  MissionManager.h
src/MockManager/: CMakeLists.txt  Heartbeat.cpp  Heartbeat.h  MockManager.cpp  MockManager.h
src/QmlControls/: UGCAirspeedIndicator.qml  UGCAttitudeIndicator.qml  UGCComboBox.qml  UGCImportFileBox.qml  UGCInputBox.qml  UGCInputComboBox.qml  UGCInputMixBox.qml  UGCMessageBox.qml  UGCPadding.qml  UGCParamSetBox.qml  UGCText.qml  UGCTextInput.qml  qmldir
src/QtLocationPlugin/: CMakeLists.txt  UGCGeoTiledMapReply.cpp  UGCGeoTiledMapReply.h  UGCQGeoServiceProviderFactory.cpp  UGCQGeoServiceProviderFactory.h  UGCQGeoTileFetcher.cpp  UGCQGeoTileFetcher.h  UGCQGeoTiledMappingManagerEngine.cpp  UGCQGeoTiledMappingManagerEngine.h  ugc_map.json
src/SettingManager/: CMakeLists.txt  SettingManager.cpp  SettingManager.h
src/UI/: MainWindow.qml  SettingWindow.qml
src/UI/component/: MissionBoxBar.qml  MissionItemEdit.qml  OfflineMapView.qml  OnlineMapView.qml  ParameterView.qml  StatusBar.qml  ToolBoxBar.qml  VehicleList.qml  VideoView.qml
src/VehicleManager/: CMakeLists.txt  Vehicle.cpp  Vehicle.h  VehicleManager.cpp  VehicleManager.h  VehicleSetup.cpp  VehicleSetup.h
src/VideoManager/: CMakeLists.txt  VideoManager.cpp  VideoManager.h
